# DongImageViewer

./: CMakeLists.txt  README.md  resources.qrc
docs/: Bandiview_Refactor_Plan.md  architecture-design.md  quality-attributes.md  requirements.md
dong_image_viewer/: __init__.py  app.py
dong_image_viewer/core/: __init__.py  archive.py  cache.py  image_service.py  models.py  security.py  uri.py  vfs.py
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/core/: AppPaths.cpp  AppPaths.h  ArchivePolicy.h  ImageData.h  ImageLoader.cpp  ImageLoader.h  LruCache.h  Metadata.h  ThumbnailCache.cpp  ThumbnailCache.h  Uri.cpp  Uri.h  Vfs.cpp  Vfs.h  VfsItem.h  ZipReader.cpp  ZipReader.h
tests/: test_core.py
